# megaschool-coding-agent

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: code_agent.yml  reviewer.yml
src/coding_agent/: __init__.py  cli.py  config.py  repo_manager.py  server.py
src/coding_agent/agents/: __init__.py  code_agent.py  reviewer.py
src/coding_agent/context/: __init__.py  collector.py
src/coding_agent/github/: __init__.py  app_auth.py  client.py
src/coding_agent/llm/: __init__.py  client.py  prompts.py  schemas.py
src/coding_agent/validation/: __init__.py  runner.py
tests/: test_collector.py  test_metadata.py  test_runner.py  test_schemas.py
